--- a/project-juice-2.0-backend/Dockerfile
+++ b/project-juice-2.0-backend/Dockerfile
@@ -7,4 +7,4 @@ RUN npm install
 COPY . .
 # WAŻNE: Upewnij się, że Twój backend nasłuchuje na tym porcie!
 EXPOSE 5000
-CMD ["node", "index.js"]
+CMD ["node", "server.js"]
