--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,54 @@
-name: Deploy to Hetzner
+name: Docker Build and Deploy
 
 on:
   push:
     branches: [ main ]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./project-juice-2.0
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/project-juice:latest
+
+      - name: Build and push API
+        uses: docker/build-push-action@v5
+        with:
+          context: ./project-juice-2.0-backend
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/project-juice-api:latest
+
   deploy:
     runs-on: ubuntu-latest
-    
+    needs: build
     steps:
-      - name: SSH and Deploy
+      - name: Deploy to VPS via SSH
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          
+          port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ~/project-juice-docker
-            git pull
-
-            docker-compose down
-            docker-compose up -d --build
+            cd /home/exy/project-juice-docker/
+            docker compose pull
+            docker compose up -d --force-recreate
+            docker image prune -f
